@@ -197,6 +197,11 @@ INCOMPATIBILITY in exotic situations.
 
 *** HOL ***
 
+* Commands 'inductive' and 'inductive_set' work better when names for
+intro rules are omitted: the "cases" and "induct" rules no longer
+declare empty case_names, but no case_names at all. This allows to use
+numbered cases in proofs, without requiring method "goal_cases".
+
 * The 'typedef' command has been upgraded from a partially checked
 "axiomatization", to a full definitional specification that takes the
 global collection of overloaded constant / type definitions into
